<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Welcome!"
                    android:textColor="#1B1A1A"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Manage your expenses"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seamlessly_intuitively"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"/>


                <EditText
                    android:id="@+id/etEmail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:autofillHints=""
                    android:background="@drawable/signup_edit_text"
                    android:hint="E-mail address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9F7171" />

                <EditText
                    android:id="@+id/etPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/signup_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9F7171" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_color"
                    android:padding="10dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Forgot password?"
                        android:textColor="#0534E6"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="105dp"
                        android:layout_height="2dp"
                        android:background="#0534E6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="90dp"
                        android:layout_height="2dp"
                        android:layout_marginEnd="5dp"
                        android:background="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_sign_in_with"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="90dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="5dp"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:drawableStart="@drawable/google"
                        android:text="Sign in with Google"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:padding="10dp"/>




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvGoToRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_account_register"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>